--- a/shalom.css
+++ b/shalom.css
@@ -123,6 +123,12 @@ img{
         
     }
 }
+.containerinstagram:hover,.containerifood:hover,.containerwhatsapp:hover{
+    height: 25px;
+    padding: 10px;
+    transition:  0.2s ease-in-out;
+    background-color: rgb(206, 204, 204);
+}
 }
 .container {
    
@@ -155,26 +161,138 @@ img{
 }
 
 .card:nth-child(1) {
+    position: relative; 
     background-image: url('https://i.postimg.cc/RhMd684n/image.png');
+    background-size: cover;
+    background-position: center;
     align-items: start;
-
+    overflow: hidden; 
 }
 
+.card:nth-child(1)::after {
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.253), rgba(128, 128, 128, 0)); 
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+
+.card:nth-child(1):hover::after {
+    opacity: 1;
+}
+
+
+.card:nth-child(1):hover {
+    margin-top: 10px;
+    padding: 40px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    color: rgb(94, 94, 94);
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, Helvetica, sans-serif;
+    transition:  0.5s ease-in-out;
+}
+
+
 .card:nth-child(2) {
+    position: relative; 
     background-image: url('https://i.postimg.cc/P5241Q28/image.png');
+    background-size: cover;
+    background-position: center;
+    align-items: start;
+    overflow: hidden; 
+}
+
+.card:nth-child(2)::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.253), rgba(128, 128, 128, 0)); 
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+
+.card:nth-child(2):hover::after {
+    opacity: 1;
+}
+
+
+.card:nth-child(2):hover {
+    margin-top: 10px;
+    padding: 40px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    color: rgb(94, 94, 94);
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, Helvetica, sans-serif;
+    transition:  0.5s ease-in-out;
 }
 
 .card.large {
     grid-column: span 2;
-    background-image: url('https://i.postimg.cc/9Fsx1LBs/image.png');
+    background-image: url('');
 }
 
+.card.large {
+    position: relative; 
+    background-image: url('https://i.postimg.cc/9Fsx1LBs/image.png');
+    background-size: cover;
+    background-position: center;
+    align-items: start;
+    overflow: hidden; 
+}
+
+.card.large::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.253), rgba(128, 128, 128, 0)); 
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+
+.card.large:hover::after {
+    opacity: 1;
+}
+
+
+.card.large:hover {
+    margin-top: 10px;
+    padding: 40px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    color: rgb(94, 94, 94);
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, Helvetica, sans-serif;
+    transition:  0.5s ease-in-out;
+}
 .menucontainer1 {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center; 
     gap: 10px;
 }
+
 
 .menuImg {
     max-width: 100%;
@@ -200,17 +318,22 @@ img{
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #f09e06ec;
-    color: white;
+    background: linear-gradient(135deg, #ffffff, #dd8501);
+    color: rgb(109, 71, 1);
     border: none;
     border-radius: 50%;
-    padding: 15px;
-    font-size: 15px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
     cursor: pointer;
     opacity: 0; 
     visibility: hidden;
-    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out, transform 0.2s;
     z-index: 1000;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 #scrollToTopBtn.show {
